--- a/movieApp.html
+++ b/movieApp.html
@@ -31,7 +31,14 @@
 			<div class="col-lg-3 mid_four"><h5>Test</h5></div>
 		</div>
 	</div>
-</div>
+
+	<div class="container moviePicContainer">
+		<div class="rows">
+			<div class="col-lg-12 poster"></div>
+			<button class="favorite">Favorite</button>
+		</div>
+	</div>
+
 
 
 
