Retrive local storage

--- a/movieApp.html
+++ b/movieApp.html
@@ -14,9 +14,9 @@
 			<div class="col-md-4 first">OMDB</div>	
 			<div class="col-md-4"><label>Movie Title<input id="titleSearch" type="text" name="movie"></label><button class="submit">submit<button></div>
 			<div class="col-md-4"><label>Watch List<select>
-				<option>Movie1</option>
-				<option>Movie2</option>
-				<option>Movie3</option>
+				<option class="movie1">Movie1</option>
+				<option class="movie2">Movie2</option>
+				<option class="movie3">Movie3</option>
 				</select></div>
 		</div>
 	</div>
@@ -25,10 +25,7 @@
 
 	<div class="container middle">
 		<div class = "rows">
-			<div class="col-lg-3 mid_one"><h5>Test</h5></div>
-			<div class="col-lg-3 mid_two"><h5>Test</h5></div>
-			<div class="col-lg-3 mid_three"><h5>Test</h5></div>
-			<div class="col-lg-3 mid_four"><h5>Test</h5></div>
+		
 		</div>
 	</div>
 
@@ -38,23 +35,6 @@
 			<button class="favorite">Favorite</button>
 		</div>
 	</div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
